# StorCard

./: README.md  main.py  pyproject.toml
api/: api_answer.py  api_app.py  api_auth.py  api_cards.py  api_config.py  api_config_start.py  api_users.py
db_modules/: db_answer.py  db_create.py  db_create_default.py  db_query.py  db_query_auth.py  db_query_cards.py  db_query_config.py  db_query_config_start.py  db_query_users.py
db_modules/generators/: code_generaters.py
front/: admin_pages.py  start_pages.py
front/public/static/js/admin/: admin.js
front/public/static/js/default/: flash_create.js  functions.js  view_password.js
front/public/static/js/start_config/: setting_db.js
front/public/static/styles/: style.css
front/public/tempales/: sample.html  sample_back.html  sample_user.html
front/public/tempales/admin/: admin.html  auth.html
front/public/tempales/config_start/: start.html
