[project]
name = "storcard"
version = "0.4.3"
description = "Add your description here"
authors = [
    {name = "foxer928",email = "nik280302@yandex.ru"}
]
repository = "https://github.com/FoXeR928/StorCard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]
